# djurl

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml  readme.md  requirements.txt
djurl/: admin.py  models.py  tests.py  urls.py  views.py
djurl/migrations/: 0001_initial.py  0002_auto_20150315_1408.py
djurl/static/djurl/css/: custom.css
djurl/templates/djurl/: base.html  index.html
modern-django-tooling/: README.md
static/djurl/css/: custom.css
url_shortener/: dev_settings.py  settings.py  urls.py  wsgi.py
