[tool.poetry]
name = "djurl"
version = "0.9.0"
description = "Self hosted URL shortener"
authors = ["Sanket Dasgupta <sanketdasgupta@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.0.7"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
